@@ -200,7 +200,7 @@ class RequestsMock:
     def assert_call_count(self, url: str, count: int) -> bool: ...
     def registered(self) -> List[Any]: ...
     def _set_registry(self, registry: Any) -> None: ...
-    def _get_registry(self) -> Any: ...
+    def get_registry(self) -> Any: ...
 
 
 HeaderSet = Optional[Union[Mapping[str, str], List[Tuple[str, str]]]]
