@@ -9,6 +9,7 @@
 * Generated decorator wrapper now uses stdlib features instead of strings and exec
 * Fix issue when Deprecation Warning was raised with default arguments
   in `responses.add_callback` due to `match_querystring`. See #464
+* Expose `get_registry()` method of `RequestsMock` object.
 
 0.17.0
 ------
